# OmniSil-Runtime

./: .gitignore  README.md  pyproject.toml
.github/workflows/: devsecops.yml
.specify/: constitution.md  plan.md  spec.md  tasks.md
benchmarks/: __init__.py  run_benchmarks.py
omnisil/: __init__.py  dispatch.py
omnisil/compiler/: __init__.py  dynamo_backend.py
omnisil/kernels/: __init__.py  attention.py  moe_gating.py  quant_gemm.py
omnisil/runtime/: __init__.py  engine.py
tests/: __init__.py  test_kernels.py
